syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Client";

package licensor;

service Licensor {
  rpc CreateLicense (CreateLicenseGrpcRequest) returns (CreateLicenseGrpcResponse);
  rpc ValidateLicense (ValidateLicenseGrpcRequest) returns (ValidateLicenseGrpcResponse);
}

message CreateLicenseGrpcRequest {
  string userId = 1;
  google.protobuf.Timestamp expires = 2;
}

message CreateLicenseGrpcResponse {
  bool success = 1;
}

message ValidateLicenseGrpcRequest {
  string userId = 1;
}

message ValidateLicenseGrpcResponse {
  bool success = 1;
}